<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context="com.ksdagile.brainlabsproxy.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btle_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:id="@+id/find_device_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickFind"
            android:text="@string/find_device_button" />

        <TextView
            android:id="@+id/connected_to_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/connected_to_hint"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tcpip_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/proxy_ip_prompt"
            android:text="@string/tcpip_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_proxy_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/proxy_ip_prompt" />

        <TextView
            android:id="@+id/textView_pc_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pc_ip_prompt" />

        <TextView
            android:id="@+id/textView_traffic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2" />
    </LinearLayout>


</LinearLayout>
